--- a/index.html
+++ b/index.html
@@ -110,13 +110,17 @@
               <div class="tab-pane fade show active py-5" id="v-pills-1" role="tabpanel" aria-labelledby="v-pills-1-tab">
                 <span class="icon mb-3 d-block flaticon-ideas"></span>
                 <h2 class="mb-4">Organic beer</h2>
-                <p>Our Organic beer "Innocence" </p>
+                <p><strong>Illusion</strong> is a strawyellow all malt pilsner with low bitterness, brewed in Uganda with great care og a focus on the great taste of hop.</p>
               </div>
 
               <div class="tab-pane fade py-5" id="v-pills-2" role="tabpanel" aria-labelledby="v-pills-2-tab">
                 <span class="icon mb-3 d-block flaticon-flasks"></span>
                 <h2 class="mb-4">Non-alcoholic beer</h2>
-                <p> Our Non-alcoholic beer "Illusion"</p>
+								<p> <strong>Innocence</strong> is an alcohol free beer made with the best ingredients provided by our trusted suppliers.
+								It aims to hit the taste of the characteristic beer taste we all know and love, without having to include the alcohol. <br>
+								Innocence is bright and golden as a pilsner, with a firm white foam. The smell is sweet and delightning,
+								the taste is fresh and light - exactly as a pilsner should be.
+							</p>
               </div>
 
               <div class="tab-pane fade py-5" id="v-pills-3" role="tabpanel" aria-labelledby="v-pills-3-tab">
@@ -129,7 +133,7 @@
               <div class="tab-pane fade py-5" id="v-pills-4" role="tabpanel" aria-labelledby="v-pills-4-tab">
                 <span class="icon mb-3 d-block flaticon-web-design"></span>
                 <h2 class="mb-4">Custom branded beer</h2>
-								<p>Need to customize your beers for a special occasion? No problem, feel free to get in touch with us <a href="#contact-section">here</a> <br>
+								<p>Need to customize your beers for a special occasion? No problem, feel free to get in touch with us <a href="#contact-section">here</a>. <br>
 								And we will make sure you have the perfect beer that suits your needs.</p>
               </div>
             </div>
@@ -138,89 +142,91 @@
       </div>
     </section>
 
-    <section class="ftco-section ftco-project bg-light" id="projects-section">
-    	<div class="container px-md-5">
-    		<div class="row justify-content-center pb-5">
-          <div class="col-md-12 heading-section text-center ftco-animate">
-          	<span class="subheading">#BeTheCompanion</span>
-            <h2 class="mb-4">Our Projects</h2>
-            <p>Check in on our previous, ongoing and future campaigns</p>
-          </div>
-        </div>
-    		<div class="row">
-    			<div class="col-md-12 testimonial">
-            <div class="carousel-project owl-carousel">
-            	<div class="item">
-            		<div class="project">
-		    					<div class="img">
-				    				<img src="images/carousel-6.jpg" class="img-fluid" alt="Colorlib Template">
-				    				<div class="text px-4">
-				    					<h3><a href="#">Work Name</a></h3>
-				    					<span>Web Design</span>
-				    				</div>
-			    				</div>
-		    				</div>
-            	</div>
-            	<div class="item">
-            		<div class="project">
-		    					<div class="img">
-				    				<img src="images/carousel-1.jpg" class="img-fluid" alt="Colorlib Template">
-				    				<div class="text px-4">
-				    					<h3><a href="#">Work Name</a></h3>
-				    					<span>Web Design</span>
-				    				</div>
-			    				</div>
-		    				</div>
-            	</div>
-            	<div class="item">
-            		<div class="project">
-		    					<div class="img">
-				    				<img src="images/carousel-2.jpg" class="img-fluid" alt="Colorlib Template">
-				    				<div class="text px-4">
-				    					<h3><a href="#">Work Name</a></h3>
-				    					<span>Web Design</span>
-				    				</div>
-			    				</div>
-		    				</div>
-            	</div>
-            	<div class="item">
-            		<div class="project">
-		    					<div class="img">
-				    				<img src="images/carousel-3.jpg" class="img-fluid" alt="Colorlib Template">
-				    				<div class="text px-4">
-				    					<h3><a href="#">Work Name</a></h3>
-				    					<span>Web Design</span>
-				    				</div>
-			    				</div>
-		    				</div>
-            	</div>
-            	<div class="item">
-            		<div class="project">
-		    					<div class="img">
-				    				<img src="images/carousel-4.jpg" class="img-fluid" alt="Colorlib Template">
-				    				<div class="text px-4">
-				    					<h3><a href="#">Work Name</a></h3>
-				    					<span>Web Design</span>
-				    				</div>
-			    				</div>
-		    				</div>
-            	</div>
-            	<div class="item">
-            		<div class="project">
-		    					<div class="img">
-				    				<img src="images/carousel-5.jpg" class="img-fluid" alt="Colorlib Template">
-				    				<div class="text px-4">
-				    					<h3><a href="#">Work Name</a></h3>
-				    					<span>Web Design</span>
-				    				</div>
-			    				</div>
-		    				</div>
-            	</div>
-            </div>
-          </div>
-    		</div>
-    	</div>
-    </section>
+		<section class="ftco-section ftco-project bg-light" id="projects-section">
+				<div class="container px-md-5">
+					<div class="row justify-content-center pb-5">
+						<div class="col-md-12 heading-section text-center ftco-animate">
+							<span class="subheading">#BeTheCompanion</span>
+							<h2 class="mb-4">Our Projects</h2>
+							<p>Check in on our previous, ongoing and future campaigns</p>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-md-12 testimonial">
+							<div class="carousel-project owl-carousel">
+								<div class="item">
+									<div class="project">
+										<div class="img">
+											<img src="images/carousel-6.jpg" class="img-fluid" alt="Colorlib Template">
+											<div class="text px-4">
+												<h3><a href="#">Cathy3121</a></h3>
+												<span>Enjoying the Antwerp sunshine with friends! <br>
+													#BeTheCompanion #Beers #Friends #TheBobIsReady</span>
+											</div>
+										</div>
+									</div>
+								</div>
+								<div class="item">
+									<div class="project">
+										<div class="img">
+											<img src="images/carousel-1.jpg" class="img-fluid" alt="Colorlib Template">
+											<div class="text px-4">
+												<h3><a href="#">PeteLoves</a></h3>
+												<span>Coworkers know how to have fun during lunchbreak without alcohol.<br>
+												#BeTheCompanion #Beers #coworkerFun #TheBobIsReady</span>
+											</div>
+										</div>
+									</div>
+								</div>
+								<div class="item">
+									<div class="project">
+										<div class="img">
+											<img src="images/carousel-2.jpg" class="img-fluid" alt="Colorlib Template">
+											<div class="text px-4">
+												<h3><a href="#">LongJohnSilver</a></h3>
+												<span>Now we can both have a beer on our adventures. Thank you #BeTheCompanion for introducing #TheBobBeer</span>
+											</div>
+										</div>
+									</div>
+								</div>
+								<div class="item">
+									<div class="project">
+										<div class="img">
+											<img src="images/carousel-3.jpg" class="img-fluid" alt="Colorlib Template">
+											<div class="text px-4">
+												<h3><a href="#">Paul McCartney</a></h3>
+												<span>Is the red dress and the smile or the beer the best in this picture? #BeTheCompanion #DecisionTime</span>
+											</div>
+										</div>
+									</div>
+								</div>
+								<div class="item">
+									<div class="project">
+										<div class="img">
+											<img src="images/carousel-4.jpg" class="img-fluid" alt="Colorlib Template">
+											<div class="text px-4">
+												<h3><a href="#">George Clooney</a></h3>
+												<span>Can you believe they wouldn't let me order a single beer? #CrazyBelgians #BeTheCompanion #CompanionWhatElse</span>
+											</div>
+										</div>
+									</div>
+								</div>
+								<div class="item">
+									<div class="project">
+										<div class="img">
+											<img src="images/carousel-5.jpg" class="img-fluid" alt="Colorlib Template">
+											<div class="text px-4">
+												<h3><a href="#">Julia Roberts</a></h3>
+												<span>Finally some time off the set for a #BeTheCompanion</span>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
 
     <section class="ftco-section" id="about-section">
     	<div class="container">
@@ -261,7 +267,7 @@
 							<div class="text d-flex align-items-center pt-3 text-center">
 								<div>
 									<h3 class="mb-2">Simon Aagaard</h3>
-									<span class="position mb-4">Web Designer</span>
+									<span class="position mb-4">Man in the middle</span>
 									<div class="faded">
 										<ul class="ftco-social text-center">
 			                <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
