--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Digilab - Free Bootstrap 4 Template by Colorlib</title>
+    <title>Companion - Making the world better two beers at a time #BeTheCompanion</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
@@ -27,7 +27,7 @@
 	  
     <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light site-navbar-target" id="ftco-navbar">
 	    <div class="container">
-	      <a class="navbar-brand" href="index.html">Digi<span>Lab</span></a>
+	      <a class="navbar-brand" href="index.html">Com<span>panion</span></a>
 	      <button class="navbar-toggler js-fh5co-nav-toggle fh5co-nav-toggle" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 	        <span class="oi oi-menu"></span> Menu
 	      </button>
@@ -44,7 +44,7 @@
 	    </div>
 	  </nav>
 	  <section id="home-section" class="hero">
-	  	<h3 class="vr">Welcome to DigiLab</h3>
+	  	<h3 class="vr">#BeTheCompanion - Companion brewery</h3>
 		  <div class="home-slider js-fullheight owl-carousel">
 	      <div class="slider-item js-fullheight">
 	      	<div class="overlay"></div>
@@ -55,7 +55,7 @@
 	          	</div>
 		          <div class="one-forth d-flex js-fullheight align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
 		          	<div class="text">
-		          		<span class="subheading">Welcome to the digilab</span>
+		          		<span class="subheading">Welcome </span>
 			            <h1 class="mb-4 mt-3">Small Details Make A Big <span>Impression</span></h1>
 			            <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country.</p>
 			            
