--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 	      	<div class="overlay"></div>
 	        <div class="container-fluid p-0">
 	          <div class="row d-md-flex no-gutters slider-text js-fullheight align-items-center justify-content-end" data-scrollax-parent="true">
-	          	<div class="one-third order-md-last img js-fullheight" style="margin-top: 82px; background-image:url(images/label-green-you.png); background-color: #d6e079; background-size: cover; background-position: center; max-height: calc(100vh - 80px);">
+	          	<div class="one-third order-md-last img js-fullheight" style="margin-top: 82px; background-image:url(images/label-green-you.png); background-color: #d6e079; background-size: contain; background-position: center; max-height: calc(100vh - 80px);">
 	          		<div class="overlay"></div>
 	          	</div>
 		          <div class="one-forth d-flex js-fullheight align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
